--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
   "dependencies": {
     "@elysiajs/cron": "^1.2.0",
     "@gramio/prompt": "^1.1.4",
+    "@types/amqplib": "^0.10.7",
+    "amqplib": "^0.10.5",
     "drizzle-orm": "^0.38.2",
     "elysia": "^1.1.26",
     "env-var": "^7.5.0",
